esl-alistat miniapp added other miniapps brought up to date opt_,ret_ return arguments beginning to be distinguished use of "const" qualifiers beginning to take hold (documentation updated (codestyle.tex) to reflect the above two lines ) GuessAlphabet() functions in alphabet,sqio,msa written/tested CAverageID() and XAverageID() in distance scorematrix: Probify() and ProbifyGivenBG().
xref J1/61-62.


git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@187 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/intro.tex
+++ b/documentation/intro.tex
@@ -1,9 +1,13 @@
 
 
 Easel is a C code library for computational analysis of biological
-sequences using probabilistic models.  Easel is used by HMMER and
-Infernal, the software packages that the Pfam and Rfam protein and RNA
-family databases rely on. Like any code library, Easel aims to make
+sequences using probabilistic models.  Easel is used by \prog{HMMER}
+\citep{hmmer,Eddy98}, the profile hidden Markov model software that
+underlies the \prog{Pfam} protein family database
+\citep{Finn06,Sonnhammer97} and several other protein family
+databases, and also by \prog{Infernal} \citep{infernal,NawrockiEddy07}
+that underlies the \prog{Rfam} RNA family database
+\citep{Griffiths-Jones05}. Like any code library, Easel aims to make
 applications more robust and easier to develop, by providing a set of
 reusable, documented, and well-tested functions.
 
