Added esl_randomness_GetSeed() (EPN's request)
random module upgraded: synopsis lines added, documentation rechecked.

autodoc_functions now grabs api subheadings (keying on /***,*#), and
takes -n <modulename> option.  It can now almost automatically format
the API tables, if the modules obey the spec.



git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@188 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/copyright.tex
+++ b/documentation/copyright.tex
@@ -5,4 +5,9 @@ Copyright (C) 2006-2007 HHMI Janelia Farm Research Campus.\\
 Copyright (C) 2004-2006 Washington University School of Medicine.\\
 \end{flushleft}
 
+\vspace{2em} 
+
+The Easel source code and documentation are freely redistributable and
+modifiable under the terms of the Janelia Farm Software License.
+
 
