--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -2,7 +2,7 @@
 % alternative fonts: 
 % times, mathptmx, mathpazo, newcent, bookman
 % xref http://www.ce.cmu.edu/~kijoo/latex2pdf.pdf
-\usepackage{bookman}
+\usepackage{times}
 
 
 
@@ -77,7 +77,7 @@
 \input{autotext/esl_keyhash_functions}
 
 \newpage
-\section{\eslmod{random}: pseudorandom numbers and basic sampling}
+\section{\eslmod{random}: pseudorandom numbers and sampling}
 \input{../esl_random}
 \subsection{Functions in the random (rnd) module}
 \input{autotext/esl_random_functions}
