--- a/documentation/titlepage.tex
+++ b/documentation/titlepage.tex
@@ -4,7 +4,7 @@
 \vspace*{\fill}
 
 \noindent
-{\Huge{Easel Programmer's Guide}} \\ 
+{\Huge{Easel}} \\ 
 \rule[2pt]{\textwidth}{1pt} \\
 \hspace*{\fill} {\large {A library of C functions for
     biosequence analysis} \\ }
@@ -12,8 +12,8 @@
 \vspace*{\fill}
 
 \begin{center}
-\url{http://selab.wustl.edu/easel/}\\
-Version 0.1; November 2004 \\ 
+\url{http://selab.janelia.org/easel/}\\
+Version 0.1; May 2007 \\ 
 
 \vspace*{\fill}
 
