--- a/documentation/macros.tex
+++ b/documentation/macros.tex
@@ -3,7 +3,7 @@
 \newcommand{\emcode}[1]{{\smaller\texttt{\textbf{#1}}}}
 \newcommand{\esldef}[1]{\textbf{#1}}                    % Define/introduce a term (to be indexed)
 \newcommand{\prog}[1]{{\smaller\textsc{#1}}}
-\newcommand{\eslmod}[1]{{\textsf{\textup{\textbf{#1}}}}}
+\newcommand{\eslmod}[1]{{\smaller\textsf{\textup{\textbf{#1}}}}}
 
 % \api* functions are for the API summary tables.
 \newcommand{\apisubhead}[1]{\multicolumn{2}{|c|}{\rule[-0.4em]{0em}{1.5em}\textbf{#1}}}
@@ -11,7 +11,7 @@
 \def\argmax{\mathop{\mathrm{argmax}}\limits}
 \def\argmin{\mathop{\mathrm{argmin}}\limits}
 
-\DefineVerbatimEnvironment{cchunk}{Verbatim}{fontsize=\scriptsize,xleftmargin=2.0\parindent}%
+\DefineVerbatimEnvironment{cchunk}{Verbatim}{fontsize=\scriptsize,xleftmargin=1.0\parindent}%
 
 % Description-like environment for documenting functions/APIs.
 % puts the description label in a minipage with a large hanging
