--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -256,6 +256,12 @@
 \input{statistics}
 
 \newpage
+\section{\eslmod{stats}: Basic statistics routines}
+\input{../esl_stats}
+\subsection{Functions in the stats module}
+\input{autotext/esl_stats_functions}
+
+\newpage
 \section{\eslmod{histogram}: Collecting histograms}
 \input{../esl_histogram}
 \subsection{Functions in the histogram module}
